--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Book</h1>
 
-
 <table>
   <thead>
     <th>Title</th>
@@ -21,10 +20,10 @@
   </tbody>
 </table>
 
-
 <%#= link_to “トップページ”, root_path %>
 <h2>New Book</h2>
-<%= form_with model: @book do |f| %>
+<%= form_with model: @book, local: true do |f| %>
+<%= render 'layouts/error_message', model: f.object %>
   <%= f.label :title, "Title" %><br>
   <%= f.text_field :title %><br>
   <%= f.label :body, "Body" %><br>
