--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,43 @@
  *
  */
 @import "bootstrap";
+
+body, #notice {
+  margin: 33px;
+  font-family: verdana, arial, helvetica, sans-serif;
+}
+
+h1, h2, label {
+  margin: 0;
+  font-weight: bold;
+}
+
+h1 {
+  font-size: 2em;
+  // 論理プロパティによるmargin指定
+  margin-block-start: 0.67em;
+  margin-block-end: 0.67em;
+  // margin-inline-start: 0px;
+  // margin-inline-end: 0px;
+}
+
+h2 {
+  font-size: 1.5em;
+  // 論理プロパティによるmargin指定
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px
+}
+
+th, td {
+  padding: 0 5px 7px;
+}
+
+#notice {
+  color: green;
+}
+
+.field, .actions {
+  margin: 0 0 10px;
+}
