--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,17 @@
 <h1>Editing Book</h1>
 
 <%= form_with model: @book do |f| %>
-  <%= f.label :title, "Title" %><br>
-  <%= f.text_field :title %><br>
-  <%= f.label :body, "Body" %><br>
-  <%= f.text_area :body %><br>
-  <%= f.submit "Update Book" %>
+  <div class="field">
+    <%= f.label :title, "Title" %><br>
+    <%= f.text_field :title %><br>
+  </div>
+  <div class="field">
+    <%= f.label :body, "Body" %><br>
+    <%= f.text_area :body %><br>
+  </div>
+  <div class="actions">
+    <%= f.submit "Update Book" %>
+  </div>
 <% end %>
 
 <%= link_to "Show", book_path(@book.id) %> |
